Fix overflow in incident charts

--- a/src/views/Incidents/LeftPane/Visualizations/styles.scss
+++ b/src/views/Incidents/LeftPane/Visualizations/styles.scss
@@ -2,6 +2,7 @@
 
 .visualizations {
     padding-top: $spacing-small;
+    overflow: auto;
 
     %chart-container {
         .header {
